script/uwsgi.log

Wed Sep 26 15:34:58 2018 - uWSGI worker 1 screams: UAAAAAAH my master disconnected: i will kill myself !!!
Wed Sep 26 15:34:58 2018 - uWSGI worker 4 screams: UAAAAAAH my master disconnected: i will kill myself !!!
Wed Sep 26 15:34:58 2018 - uWSGI worker 3 screams: UAAAAAAH my master disconnected: i will kill myself !!!
Wed Sep 26 15:34:58 2018 - uWSGI worker 2 screams: UAAAAAAH my master disconnected: i will kill myself !!!
Wed Sep 26 15:34:58 2018 - uWSGI worker 5 screams: UAAAAAAH my master disconnected: i will kill myself !!!
*** Starting uWSGI 2.0.17.1 (64bit) on [Wed Sep 26 15:37:08 2018] ***
compiled with version: 4.8.5 20150623 (Red Hat 4.8.5-16) on 27 August 2018 07:28:24
os: Linux-3.10.0-693.2.2.el7.x86_64 #1 SMP Tue Sep 12 22:26:13 UTC 2017
nodename: izm5e47p6szixv6rgotzl2z
machine: x86_64
clock source: unix
pcre jit disabled
detected number of CPU cores: 1
current working directory: /data/cycle
writing pidfile to /data/cycle/script/uwsgi.pid
detected binary path: /usr/local/bin/uwsgi
*** WARNING: you are running uWSGI as root !!! (use the --uid flag) *** 
chdir() to /data/cycle/
your processes number limit is 1879
your memory page size is 4096 bytes
detected max file descriptor number: 65535
building mime-types dictionary from file /etc/mime.types...0 entry found
lock engine: pthread robust mutexes
thunder lock: enabled
uwsgi socket 0 bound to TCP address 127.0.0.1:8001 fd 3
*** WARNING: you are running uWSGI as root !!! (use the --uid flag) *** 
Python version: 3.6.5 (default, Jul 31 2018, 15:09:54)  [GCC 4.8.5 20150623 (Red Hat 4.8.5-16)]
Python main interpreter initialized at 0x2767960
*** WARNING: you are running uWSGI as root !!! (use the --uid flag) *** 
python threads support enabled
your server socket listen backlog is limited to 100 connections
your mercy for graceful operations on workers is 60 seconds
mapped 486672 bytes (475 KB) for 5 cores
*** Operational MODE: preforking ***
Traceback (most recent call last):
  File "./cycle/wsgi.py", line 16, in <module>
    application = get_wsgi_application()
  File "/usr/local/lib/python3.6/site-packages/django/core/wsgi.py", line 12, in get_wsgi_application
    django.setup(set_prefix=False)
  File "/usr/local/lib/python3.6/site-packages/django/__init__.py", line 19, in setup
    configure_logging(settings.LOGGING_CONFIG, settings.LOGGING)
  File "/usr/local/lib/python3.6/site-packages/django/conf/__init__.py", line 56, in __getattr__
    self._setup(name)
  File "/usr/local/lib/python3.6/site-packages/django/conf/__init__.py", line 43, in _setup
    self._wrapped = Settings(settings_module)
  File "/usr/local/lib/python3.6/site-packages/django/conf/__init__.py", line 106, in __init__
    mod = importlib.import_module(self.SETTINGS_MODULE)
  File "/usr/local/lib/python3.6/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "./cycle/settings.py", line 53
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
unable to load app 0 (mountpoint='') (callable not found or import error)
*** no app loaded. going in full dynamic mode ***
*** WARNING: you are running uWSGI as root !!! (use the --uid flag) *** 
*** uWSGI is running in multiple interpreter mode ***
spawned uWSGI master process (pid: 19311)
spawned uWSGI worker 1 (pid: 19313, cores: 1)
spawned uWSGI worker 2 (pid: 19314, cores: 1)
spawned uWSGI worker 3 (pid: 19315, cores: 1)
spawned uWSGI worker 4 (pid: 19316, cores: 1)
spawned uWSGI worker 5 (pid: 19317, cores: 1)
